--- a/css/prefsmodal.css
+++ b/css/prefsmodal.css
@@ -40,3 +40,13 @@ input#prefs-btn {
     text-transform: uppercase;
 
 }
+
+.visuallyhidden {
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
