Sets prefs form button to black.

--- a/css/prefsmodal.css
+++ b/css/prefsmodal.css
@@ -39,7 +39,7 @@ input#prefs-btn {
 
 #prefs-form button {
     color: #fff;
-    background-color: #EC1B23;
+    background-color: #000;
     border-radius: 0;
     font-family: 'Rajdhani',Helvetica,Arial,sans-serif;
     text-transform: uppercase;
